syntax = "proto3";

package proto;

option go_package = "proto/;my_protobuf";

import "laptop_message.proto";
import "filter_message.proto";

message CreateLaptopRequest {
    Laptop laptop = 1;
}

message CreateLaptopResponse {
    string id = 1;
}

// 请求一个Filter对象
message SearchLapTopRequest {
    Filter filter = 1;
}

// 返回一个Laptop的对象
message SearchLapTopResponse {
    Laptop laptop = 1;
}

service LaptopService {
    rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse) {};
    rpc SearchLaptop(SearchLapTopRequest) returns (stream SearchLapTopResponse) {};
}
